--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,21 @@
     --contacts-color:rgba(255, 255, 255, 0.6);
 }
 
+h1,
+h2,
+h3,
+h4,
+p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+
+ul,ol{
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
 .link {
     text-decoration: none;
 }
@@ -21,14 +36,17 @@
 
  img {
     display: block;
-}
+    max-width: 100%;
+    height: auto;
+    }
 
-button{
+
+button {
     font-family: inherit;
     cursor: pointer;
 }
 
-body{
+body {
     font-family: var(--primary-font);
     font-size: 14px;
     letter-spacing: 0.03em;
@@ -36,12 +54,46 @@ body{
     color: var(--primary-text-color);
 }
 
+.container{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.page-header{
+    border-bottom: 1px solid #ECECEC;
+}
+.page-header-container{
+        display: flex;
+       }
 
+.page-navigation{
+    display: flex;
+    align-items: center;
+}
+.menu{
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: flex;
+    column-gap: 50px;
+    }
+.contact {
+    display: flex;
+    margin-left: auto; 
+    align-items: center;
+}
+.contact-phone-number{
+    margin-left: 50px;
+     
+}
 .logo{
     font-family: var(--secondary-font);
         font-weight: 700;
         font-size: 26px;
         line-height: 1.19;
+        margin-right: 93px;
          color:var(--logo-color);
     }
 .accent{
@@ -61,14 +113,14 @@ color:var(--primary-text-color);
 
 .menu-link.current{
      color:var(--accent-color);
- }
+}
 
 .contact-mail{
         font-style: normal;
         font-weight: 500;
         line-height: 1.14;
         letter-spacing: 0.02em;
-      color: var(--secondary-text-color);
+        color: var(--secondary-text-color);
 }
 .contact-mail:hover,
 .contact-mail:focus{
@@ -88,42 +140,62 @@ color:var(--accent-color);
 }
 
 /* hero */
-.hero{
+.hero {
     background-color: var(--background-dar-color);
+    text-align: center;
 }
-.hero-title{
-        font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
-        text-align: center;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
-        color: var(--hero-title-color);
+.hero-title {
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-weight: 900;
+    font-size: 44px;
+     line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--hero-title-color);
 }
 /* Button */
-.button{
-    
+.button {
+
 background-color:var(--accent-color);
 color: var(--hero-title-color);
 }
-
 .button {
+       border-radius: 4px;
+       padding: 10px 32px;
        font-family: var(--primary-font);
         font-weight: 700;
         font-size: 16px;
         line-height: 1.87;
-        display: flex;
-        align-items: center;
-        text-align: center;
+    
         letter-spacing: 0.06em;
         color:var(--hero-title-color);
+      
 }
 
 /* section */
+
+.section-container{
+    display: flex;
+}
+
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+ }
+.benefit-list{
+    display: flex;
+    column-gap: 30;
+}
+.benefit-list .title{
+    margin-bottom: 10px;
+}
+
 .benefit-list .text,
 .team-list .text{
     coior:var(--secondary-text-color);
 }
+
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
@@ -136,13 +208,23 @@ color: var(--hero-title-color);
     clip-path: inset(50%);
     margin: -1px;
 }
+
+.foto-elements{
+    flex-basis: calc((100% - 60px) / 3);
+}
 .section-title{
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
-    
 }
+.foto-item{
+    display: flex;
+    padding-bottom: 94px;
+    column-gap: 30px;
+}
+   
  .title{
     font-weight: 700;
     line-height: 1.14;
@@ -155,7 +237,15 @@ color: var(--hero-title-color);
  }   
 /* Section team */
 
+.team-list{
+    display: flex;
+    padding-bottom: 94px;
+    column-gap: 30px;
+}
+
 .imagene-fone{
+    flex-basis: calc((100% - 90px) / 4);
+    border-radius: 0px 0px 4px 4px;
     background-color: var(--hero-title-color);
 }
 
@@ -164,6 +254,7 @@ color: var(--hero-title-color);
 }
 
 .title-page{
+   padding-bottom: 10px;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.18;
@@ -171,15 +262,27 @@ color: var(--hero-title-color);
         }
 
 .text-page{
-        font-size: 16px;
+   
+         font-size: 16px;
         line-height: 1.18;
         text-align: center;
          color: var(--secondary-text-color);
+
+}
+.teamlist{
+    padding-bottom: 30px;
+    padding-top: 30px;
 }
 
 /* Footer */
 .page-footer{
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: var(--background-dar-color);
+}
+
+.adrees-page {
+    margin-top: 20px;
 }
 
 .logo-footer {
@@ -191,6 +294,7 @@ color: var(--hero-title-color);
 }
 
 .adrees-footer{
+    margin-top: 20px;
         font-style: normal;
         font-weight: 400;
         line-height: 1.71;
@@ -198,6 +302,7 @@ color: var(--hero-title-color);
 }
 
 .contact-footer{
+    padding-top: 9px;
         font-style: normal;
         font-weight: 400;
         line-height: 1.71;
@@ -206,13 +311,7 @@ color: var(--hero-title-color);
 
 .contact-footer:hover,
 .contact-footer:focus{
-    color:var(--accent-color);
-    }
-
-/* portfolio */
-
-.pagemain{
-        font-style: normal;
+    color:var(--accent-color); 
         font-weight: 500;
         font-size: 16px;
         line-height: 1.62;
@@ -230,10 +329,46 @@ color: var(--background-cloudy-color);
         font-size: 18px;
         line-height: 2;
         letter-spacing: 0.06em;
+        padding-bottom: 4px;
      }
 
 .pagelist{
         font-size: 16px;
         line-height: 1.87;
          color: var(--secondary-text-color);
-    }
+    } 
+/* Portfolio */
+
+.flex-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    flex-basis: calc((100% - 60px) / 3);
+    padding-bottom: 94px;
+}
+
+
+.page-main{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 50px;
+    padding-top: 94px;
+    column-gap: 8px;
+}
+
+.flex-element{
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE
+}
+.pagemain{
+    padding: 6px 22px;
+    border: 1px solid transparent;
+    
+    font-family: var(--primary-font);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 26px;
+        text-align: center;
+        letter-spacing: 0.03em;
+         color:var(--primary-text-color);
+}
